--- a/TravelPlanner Back/travel-planner/pom.xml
+++ b/TravelPlanner Back/travel-planner/pom.xml
@@ -93,6 +93,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
@@ -100,6 +104,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <configuration>
+                    <url>jdbc:mysql://localhost:3306/travel_planner</url>
+                    <user>root</user>
+                    <password></password>
+                </configuration>
             </plugin>
         </plugins>
     </build>
