--- a/TravelPlanner Back/travel-planner/src/main/resources/application.properties
+++ b/TravelPlanner Back/travel-planner/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
+spring.flyway.enabled=false
+spring.flyway.url=jdbc:mysql://localhost:3306/travel_planner
+spring.flyway.username=root
+spring.flyway.password=
